feat: component interaction - intersept with setter

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
 <!-- to handle components interactions -->
 <app-hero-parent></app-hero-parent>
 
+<!-- intercept parent variables with inputh setter -->
+<app-name-parent></app-name-parent>
+
 <router-outlet></router-outlet>
