feat: components comunication - children listen parent changes with ngOnChanges

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,4 +4,7 @@
 <!-- intercept parent variables with inputh setter -->
 <app-name-parent></app-name-parent>
 
+<!-- to update values on child after change in parent -->
+<app-version-parent></app-version-parent>
+
 <router-outlet></router-outlet>
