feat: components interaction - child to parent event emitter

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,4 +7,7 @@
 <!-- to update values on child after change in parent -->
 <app-version-parent></app-version-parent>
 
+<!-- parent listening of changes made on child -->
+<app-votetaker></app-votetaker>
+
 <router-outlet></router-outlet>
