feat: components interactions - parent calling methods that are inside child component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,4 +10,7 @@
 <!-- parent listening of changes made on child -->
 <app-votetaker></app-votetaker>
 
+<!-- parent calling methods of a child -->
+<app-countdown-parent></app-countdown-parent>
+
 <router-outlet></router-outlet>
